# an-old-disappointment

./: README.md  pyproject.toml
an_old_disappointment/: main.py
an_old_disappointment/object_detector/: yolo_v7.py
an_old_disappointment/video_stream/: base.py  file_video_stream.py  livekit_stream_reader.py  livekit_video_stream.py
an_old_disappointment/workers/: workspace_monitor.py  workspace_state_publisher.py
tests/: test_file_video_stream.py  test_livekit_video_stream.py
workspace_monitor/: config.py  main.py
